--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@ lilás: #5f2c82
 }
 
 body, html{
-    background-color: rgb(144, 171, 197);
+    background-color:#49a09d;
     height: 100vh;
     width: 100vw;
 }
@@ -37,6 +37,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.404);
+
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease ;
 }
 
 section#login > div#imagem {
