--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -7,6 +7,7 @@
     }
     section#login {
         width: 80vw;
+        height: 280px;
     }
     
     section#login > div#imagem {
@@ -29,12 +30,15 @@
 
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
         float: right;
         width: 50%;
         height: 100%;
+        background-image: url('../imagens/tyson2.jpg');
+        
     }
     
     section#login > div#formulario {
@@ -48,5 +52,6 @@
     
     div#formulario > p {
         font-size: 1.2em;
+        margin: 20px 0px;
     }
 }
